tests/kyverno/require-resources/resources/pod-missing-resources.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-missing-resources
spec:
  containers:
    - name: app
      image: busybox:1.36
